--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  country_picker: ^2.0.27
   persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
