--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   cached_network_image: ^3.4.1
   intl: ^0.18.1
+  lucide_icons: ^0.257.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
