--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,11 @@ dependencies:
   intl: ^0.18.1
   lucide_icons: ^0.257.0
   http: ^1.3.0
-  dio: ^5.4.0
+  dio: ^4.0.6
   flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.2
+  get: ^4.6.5
+  
 
 dev_dependencies:
   flutter_test:
